# LangSkills

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE-docs  MANIFEST.in  README.md  SAFETY.md  SECURITY.md  docker-compose.yml  index.html  langskills_cli.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: agent-generate.yml  audit-capture.yml  build-site.yml  ci.yml  eval.yml  lifecycle-apply.yml  lifecycle.yml  link-check.yml  lint.yml  pr-score.yml  publish.yml  test.yml
agents/: README.md  run_local.js
agents/adapters/: README.md  github_repo.js  manpage.js  openapi.js  sitemap.js
agents/configs/: cloud.yaml  data.yaml  devtools.yaml  integrations.yaml  linux.yaml  productivity.yaml  sources.yaml  travel.yaml  web.yaml
agents/crawler/: README.md  run.js
agents/curator/: README.md  run.js
agents/extractor/: README.md  run.js
agents/generator/: README.md  integrations_capture.js  license_lookup.js  linux_capture.js
agents/llm/: README.md  index.js
agents/orchestrator/: README.md  run.js
agents/runner/: README.md  run.js
captures/: README.md
cli/: README.md  skill.js
config/: README.md  autopilot.example.json  autopilot_schedule.full.example.json  autopilot_schedule.safe.example.json  report_schedule.example.json  skill_config.json  解析.md
core/: __init__.py  cli.py  config.py  detect_project.py  search.py
core/llm/: README.md  (+7 more)
docs/: backend_full_report.md  budget.md  curator_llm.md  docker.md  faq.md  gap_ideal_vs_reality.md  governance.md  index.md  license_policy.md  lifecycle.md  longrun_90d_runbook.md  meeting_qa.md  milestone_gap.md  mohu.md  must_ingest_sources.md  plan.md  prompts.md  repo_inventory.md  skill-format.md  taxonomy.md  verify_log.md
langskills/: README.md  __init__.py  domain_config.py  env.py  search.py
patterns/: README.md
plugin/: README.md
runs/: README.md
scripts/: audit-run.js  audit-skill-quality.js  audit-source-pages.js  backfill-sources-license.js  bootstrap-linux-skeleton.ps1  build-site.js  closed-loop-summary.js  closed-loop.sh  create-pr.js  demo-capture-skill.sh  e2e-ui.js  git-automation.js  license-policy.json  lifecycle.js  pr-score.js  render-topics-table.js  run-longrun.js  run-topic.js  self-check.js  self-check.ps1  serve-local.js  serve-site.js  synth-skills.js  test-serve-local.js  validate-skills.js  verify-longrun.js
skills/: README.md  skillsets.json
tests/: test_bundle_install.py  test_config.py  test_env.py  test_imports.py  test_utils.py
website/: README.md
(+10672 files in other folders)
