[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langskills-rai"
dynamic = ["version"]
description = "Turn any topic into an evidence-backed skills library — automatically"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Responsible AI Lab @ FSU" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]
keywords = ["skills", "evidence", "research", "llm", "knowledge-base", "rag"]

dependencies = [
    "httpx>=0.27",
    "requests>=2.31",
    "PyYAML>=6.0",
    "rich>=13.0",
    "tiktoken>=0.7",
    "regex>=2024.1",
    "pdfminer.six>=20231228",
]

[project.optional-dependencies]
playwright = ["playwright>=1.40"]
tavily = ["tavily-python>=0.5"]
dist = ["zstandard>=0.22"]
dev = [
    "pytest>=8.0",
    "Pygments>=2.17",
]

[project.urls]
Homepage = "https://github.com/LabRAI/LangSkills"
Repository = "https://github.com/LabRAI/LangSkills"
Documentation = "https://labrai.github.io/LangSkills/"
Issues = "https://github.com/LabRAI/LangSkills/issues"

[project.scripts]
langskills-rai = "core.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core", "core.*"]

[tool.setuptools_scm]
write_to = "core/_version.py"
fallback_version = "0.1.0"
